<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_main_bg_gray">

    <LinearLayout
        android:id="@+id/ll_actionbar"
        android:orientation="horizontal"
        android:background="@color/color_top_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:paddingTop="@dimen/actionbar_padding_top">

        <ImageView
            android:id="@+id/btn_close"
            android:scaleType="center"
            android:contentDescription="@null"
            android:src="@mipmap/ic_back"
            android:layout_width="50dp"
            android:layout_height="match_parent"/>

        <View
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="#000"
            android:layout_width="1px"
            android:layout_height="match_parent"/>

        <TextView
            android:text="@string/title_settings"
            android:textSize="18sp"
            android:textColor="@android:color/white"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:id="@+id/tv_activity_title"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <ScrollView
        android:paddingTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:background="@android:color/white"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/setting_clear_cache"
                    android:gravity="center_vertical"
                    android:paddingStart="12dp"
                    android:paddingLeft="12dp"
                    android:paddingRight="12dp"
                    android:paddingEnd="12dp"
                    android:orientation="horizontal"
                    android:background="@drawable/bg_list_item_press"
                    android:layout_width="match_parent"
                    android:layout_height="42dp">

                    <TextView
                        android:textColor="@color/primary_text"
                        android:textSize="14sp"
                        android:text="@string/label_clear_cache"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:id="@+id/tv_cache_size"
                        android:textColor="@color/color_main_gray"
                        android:textSize="12sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

                <View
                    android:background="@color/color_main_bg_gray"
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"/>

                <LinearLayout
                    android:id="@+id/setting_check_update"
                    android:gravity="center_vertical"
                    android:paddingStart="12dp"
                    android:paddingLeft="12dp"
                    android:paddingRight="12dp"
                    android:paddingEnd="12dp"
                    android:orientation="horizontal"
                    android:background="@drawable/bg_list_item_press"
                    android:layout_width="match_parent"
                    android:layout_height="42dp">

                    <TextView
                        android:textColor="@color/primary_text"
                        android:textSize="14sp"
                        android:text="@string/label_check_update"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"/>

                    <!--<com.kyleduo.switchbutton.SwitchButton
                        android:id="@+id/switch_new_message"
                        android:checked="true"
                        app:kswTintColor="@color/color_main_green"
                        android:layout_width="25dp"
                        android:layout_height="16dp"/>-->

                </LinearLayout>

                <View
                    android:background="@color/color_main_bg_gray"
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"/>

                <LinearLayout
                    android:id="@+id/setting_about_us"
                    android:gravity="center_vertical"
                    android:paddingStart="12dp"
                    android:paddingLeft="12dp"
                    android:paddingRight="12dp"
                    android:paddingEnd="12dp"
                    android:orientation="horizontal"
                    android:background="@drawable/bg_list_item_press"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    >

                    <TextView
                        android:textColor="@color/primary_text"
                        android:textSize="14sp"
                        android:text="@string/label_about_us"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"/>

                    <!--<com.kyleduo.switchbutton.SwitchButton
                        android:id="@+id/switch_list_img"
                        app:kswTintColor="@color/color_main_green"
                        android:layout_width="25dp"
                        android:layout_height="16dp"/>-->

                </LinearLayout>

                <View
                    android:background="@color/color_main_bg_gray"
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    />

                <LinearLayout
                    android:id="@+id/setting_commit_suggestion"
                    android:gravity="center_vertical"
                    android:paddingStart="12dp"
                    android:paddingLeft="12dp"
                    android:paddingRight="12dp"
                    android:paddingEnd="12dp"
                    android:orientation="horizontal"
                    android:background="@drawable/bg_list_item_press"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    >

                    <TextView
                        android:textColor="@color/primary_text"
                        android:textSize="14sp"
                        android:text="@string/label_commit_suggestion"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"/>

                    <!--<com.kyleduo.switchbutton.SwitchButton
                        android:id="@+id/switch_wifi_update"
                        app:kswTintColor="@color/color_main_green"
                        android:layout_width="25dp"
                        android:layout_height="16dp"/>-->

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="12dp"
                android:background="@android:color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/setting_open_source"
                    android:gravity="center_vertical"
                    android:paddingStart="12dp"
                    android:paddingLeft="12dp"
                    android:paddingRight="12dp"
                    android:paddingEnd="12dp"
                    android:orientation="horizontal"
                    android:background="@drawable/bg_list_item_press"
                    android:layout_width="match_parent"
                    android:layout_height="42dp">

                    <TextView
                        android:textColor="@color/primary_text"
                        android:textSize="14sp"
                        android:text="@string/label_opensource"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"/>

                    <ImageView
                        android:contentDescription="@null"
                        android:src="@mipmap/btn_right"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="12dp"
                android:background="@android:color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/setting_logout"
                    android:gravity="center"
                    android:paddingStart="12dp"
                    android:paddingLeft="12dp"
                    android:paddingRight="12dp"
                    android:paddingEnd="12dp"
                    android:orientation="horizontal"
                    android:background="@drawable/bg_list_item_press"
                    android:textColor="@color/color_warning"
                    android:textSize="14sp"
                    android:text="@string/label_logout"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"/>

            </LinearLayout>
        </LinearLayout>

    </ScrollView>

</LinearLayout>